[package]
name = "shadow-drive-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-rust = "0.4.0"
tokio = {version = "^1", features = ["full"]}
anyhow = "1.0.65"
byte-unit = "4.0.14"
solana-sdk = "1.10.34"
solana-remote-wallet = "1.10.34"
reqwest = "0.11.12"
itertools = "0.10.5"
uriparse = "0.6.4"
clap = { version = "3.1.18", features = [ "derive" ] }
solana-clap-v3-utils = { git = "https://github.com/Jungle-Finance/jungle-fi-cli-utils.git" }
jungle-fi-cli-utils = { git = "https://github.com/Jungle-Finance/jungle-fi-cli-utils.git" }
